Last practice here

--- a/index.html
+++ b/index.html
@@ -20,6 +20,24 @@
     <h5>Heading h5</h5>
     <h6>Heading h6</h6>
 
+    <h2>Unordered list</h2>
+    <ul>
+        <li>apples</li>
+        <li>peaches</li>
+        <li>pineapples</li>
+        <li>nectarines</li>
+        <li>oranges</li>
+    </ul>
+
+    <h2>Ordered list</h2>
+    <ol>
+        <li>Peel potatoes</li>
+        <li>Boil potatoes</li>
+        <li>Add spices</li>
+        <li>Dry them</li>
+        <li>Serve and enjoy :)</li>
+    </ol>
+
 <!-- HTML comment -->
 </body>
 </html>
